tenzir/tests/exec/expr/escape/basic/out_of_range.txt
error: invalid unicode escape sequence
 --> exec/expr/escape/basic/out_of_range.tql:4:8
  |
4 |   x: "\u{120301230123}",
  |        ^^^^^^^^^^^^^^^ 
  |
